# power-sampling

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: fsdp_4.yaml
results/math500/Qwen_Qwen3-1.7B/: Qwen_Qwen3-1.7B_results.json  Qwen_Qwen3-1.7B_summary.json
results/math500/Qwen_Qwen3-1.7B/power_sampling/: Qwen_Qwen3-1.7B_results.json  (+1 more)
results/math500/Qwen_Qwen3-4B/: Qwen_Qwen3-4B_results.json  Qwen_Qwen3-4B_summary.json
results/math500/allenai_OLMo-2-0425-1B/: allenai_OLMo-2-0425-1B_results.json  allenai_OLMo-2-0425-1B_summary.json
results/math500/allenai_Olmo-3-1025-7B/: allenai_Olmo-3-1025-7B_results.json  allenai_Olmo-3-1025-7B_summary.json
scalable_power_sampling/: __init__.py  batched_power_sampler.py  power_sampler.py  rollouts.py  scaling.py  smc_power_sampler.py  utils.py  vllm_batched_power_sampler.py
scripts/: demo.py  epistemic_analysis.py  judge_quality.py  pass_rate.py  power_dist_kl_div.py  run_eval.py  train_sdft.py  train_sdft_only_ans.py  utils.py
scripts/analysis/: epistemic_analysis.py  judge_quality.py  pass_rate.py  power_dist_kl_div.py
scripts/eval/: run_eval.py
scripts/rl/: generate_demos.py  generate_power_demos.py  generate_synthetic_questions.py  trace_monitor.py  train_grpo_monitor.py  train_sdft.py
src/: utils.py
src/analysis/: epistemic_analysis.py  judge_quality.py  pass_rate.py  power_dist_kl_div.py
src/eval/: run_eval.py  run_gpqa.py  run_humaneval.py  run_ifbench.py
src/synth/: generate_demos.py  generate_power_demos.py  generate_synthetic_questions.py
src/train/: train_sdft.py
tests/: test_scaling.py
(+10 files in other folders)
